# bsmcoin-core

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile.dockerfile  INSTALL  Makefile.am  PushToTheServers  README.md  configure.ac  libbsmcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh
.tx/: config
contrib/: README.md  bsmcoin-cli.bash-completion  bsmcoin-qt.pro  bsmcoin-tx.bash-completion  bsmcoind.bash-completion  gitian-build.sh  qt_translations.py  stressor_dao.sh  tidy_datadir.sh
depends/: Makefile  description.md
doc/: Creating_an_OSX_DMG.md  Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  (+22 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  bsmcoin-cli-res.rc  bsmcoin-cli.cpp  bsmcoin-tx-res.rc  bsmcoin-tx.cpp  bsmcoind-res.rc  bsmcoind.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  daoversionbit.cpp  daoversionbit.h  (+56 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  dao.cpp  dao.h  daoconsensusparams.h  merkle.cpp  merkle.h  params.h  validation.h
src/consensus/dao/: flags.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/mnemonic/: dictionary.cpp  dictionary.h  generateseed.cpp  generateseed.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: NavCoin4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bsmcoin.cpp  bsmcoin.qrc  bsmcoin_locale.qrc  bsmcoinaddressvalidator.cpp  bsmcoinaddressvalidator.h  bsmcoinamountfield.cpp  bsmcoinamountfield.h  bsmcoingui.cpp  bsmcoingui.h  bsmcoinlistwidget.cpp  bsmcoinlistwidget.h  bsmcoinpushbutton.cpp  bsmcoinpushbutton.h  bsmcoinstrings.cpp  bsmcoinunits.cpp  bsmcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  coldstakingwizard.cpp  communityfundcreatepaymentrequestdialog.cpp  communityfundcreateproposaldialog.cpp  communityfunddisplay.cpp  communityfunddisplaydetailed.cpp  communityfunddisplaypaymentrequest.cpp  communityfunddisplaypaymentrequestdetailed.cpp  communityfundpage.cpp  communityfundsuccessdialog.cpp  csvmodelwriter.h  daoconsultationcreate.cpp  daoconsultationcreate.h  (+82 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  communityfundcreatepaymentrequestdialog.ui  communityfundcreateproposaldialog.ui  communityfunddisplay.ui  communityfunddisplaydetailed.ui  communityfunddisplaypaymentrequest.ui  communityfunddisplaypaymentrequestdetailed.ui  communityfundpage.ui  debugwindow.ui  getaddresstoreceive.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  sendcommunityfunddialog.ui  signverifymessagedialog.ui
src/qt/locale/: bsmcoin_af.ts  bsmcoin_af_ZA.ts  bsmcoin_ar.ts  bsmcoin_be_BY.ts  bsmcoin_bg.ts  bsmcoin_bg_BG.ts  bsmcoin_ca.ts  bsmcoin_ca@valencia.ts  bsmcoin_ca_ES.ts  bsmcoin_cs.ts  bsmcoin_cs_CZ.ts  bsmcoin_cy.ts  bsmcoin_da.ts  bsmcoin_de.ts  bsmcoin_el.ts  bsmcoin_el_GR.ts  bsmcoin_en.ts  bsmcoin_en_GB.ts  bsmcoin_eo.ts  bsmcoin_es.ts  bsmcoin_es_AR.ts  bsmcoin_es_CL.ts  bsmcoin_es_CO.ts  bsmcoin_es_DO.ts  bsmcoin_es_ES.ts  bsmcoin_es_MX.ts  bsmcoin_es_UY.ts  bsmcoin_es_VE.ts  bsmcoin_et.ts  bsmcoin_eu_ES.ts  bsmcoin_fa.ts  bsmcoin_fa_IR.ts  bsmcoin_fi.ts  bsmcoin_fr.ts  bsmcoin_fr_CA.ts  bsmcoin_fr_FR.ts  bsmcoin_gl.ts  bsmcoin_he.ts  bsmcoin_hi_IN.ts  bsmcoin_hr.ts  (+45 more)
src/qt/res/: bsmcoin-qt-res.rc
src/qt/res/themes/: app.qss  shared.qss
src/qt/res/themes/dark/: styles.qss
src/qt/res/themes/light/: styles.qss
src/qt/styles/: dark.cpp  dark.h  light.cpp  light.h
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: bsmcoinconsensus.cpp  bsmcoinconsensus.h  interpreter.h  ismine.cpp  ismine.h  script.h  script_error.h  sigcache.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bsmcoin-util-test.py  cfund_tests.cpp  cfunddb_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  (+19 more)
src/test/data/: README.md  bsmcoin-util-test.json
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+251 files in other folders)
